# eduart_setup_tool

./: CMakeLists.txt  README.md
documentation/: eduart-setup-tool-flow.drawio
resources/: eduart-package-catalog.json  eduart-software-catalog.json
src/: CMakeLists.txt  application_main_menu.cpp  application_main_menu.hpp  application_main_menu_view.cpp  application_main_menu_view.hpp  application_state.cpp  application_state.hpp  application_view.hpp  eduart_setup_tool.cpp  eduart_software.hpp  eduart_software_querier.cpp  eduart_software_querier.hpp  eduart_software_service.cpp  eduart_software_service.hpp  root_permission_check.cpp  root_permission_check.hpp  shell_executer.cpp  shell_executer.hpp
