add_executable(eduart_setup_tool
  eduart_setup_tool.cpp
  shell_executer.cpp
  root_permission_check.cpp
  application_state.cpp
  application_main_menu.cpp
  application_main_menu_view.cpp
  eduart_software_querier.cpp
  eduart_software_service.cpp
)
target_include_directories(eduart_setup_tool
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)
target_link_libraries(eduart_setup_tool
  PRIVATE
    ${Notcurses_LIBRARIES}
    ${Notcurses++_LIBRARIES}
    nlohmann_json::nlohmann_json
)
